--- a/FoodDelivery/src/main/resources/templates/edit-restaurant.html
+++ b/FoodDelivery/src/main/resources/templates/edit-restaurant.html
@@ -20,13 +20,13 @@
             <!-- Restaurant Name Input -->
             <div class="col-12">
                 <label for="inputName" class="form-label">Name</label>
-                <input type="text" class="form-control mb-2" id="inputName" th:value="${restaurant.getName()}" name="restaurantName">
+                <input type="text" class="form-control mb-2" id="inputName" th:value="${restaurant.getName()}" name="Name">
             </div>
 
             <!-- Contact Number Input -->
             <div class="col-12">
                 <label for="inputContactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control mb-2" id="inputContactNumber" th:value="${restaurant.getContactNumber()}" name="contactNumber">
+                <input type="text" class="form-control mb-2" id="inputContactNumber" th:value="${restaurant.getContactNumber()}" name="ContactNumber">
             </div>
 
 
