--- a/FoodDelivery/src/main/resources/templates/home.html
+++ b/FoodDelivery/src/main/resources/templates/home.html
@@ -11,6 +11,26 @@
 <body>
 
 <div th:replace="fragments/fragment :: navbar"></div>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div th:each="entry : ${closestAddresses}" class="col">
+        <div class="card h-100">
+            <img src="..." class="card-img-top" alt="Restaurant Image">
+            <div class="card-body">
+                <!-- Display Restaurant Name -->
+                <h5 class="card-title" th:text="${entry.key.getName()}">Restaurant Name</h5>
+                <!-- Display Restaurant Rating -->
+                <p class="card-rating" th:text="${'Rating: ' + entry.key.getRating()}">Rating</p>
+                <!-- Display Closest Address if Logged In -->
+                <div class="card-text" th:if="${loggedIn}">
+                    <span class="card-address">Closest Address: <span th:text="${entry.value}"></span></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
