--- a/FoodDelivery/src/main/resources/templates/home.html
+++ b/FoodDelivery/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div th:each="entry : ${closestAddresses}" class="col">
         <div class="card h-100">
-            <img src="..." class="card-img-top" alt="Restaurant Image">
+            <img th:src="@{/{picturePath}(picturePath=${entry.key.getPicturePath()})}" class="card-img-top" alt="Restaurant Image">
             <div class="card-body">
                 <!-- Display Restaurant Name -->
                 <h5 class="card-title" th:text="${entry.key.getName()}">Restaurant Name</h5>
@@ -24,6 +24,7 @@
                 <!-- Display Closest Address if Logged In -->
                 <div class="card-text" th:if="${loggedIn}">
                     <span class="card-address">Closest Address: <span th:text="${entry.value}"></span></span>
+                    <a th:src="@{/}" class="btn btn-custom-color w-100 mb-2">Order</a>
                 </div>
             </div>
         </div>
