--- a/FoodDelivery/src/main/resources/templates/home.html
+++ b/FoodDelivery/src/main/resources/templates/home.html
@@ -12,6 +12,24 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
+<div class="row row-cols-1 row-cols-md-3 g-4" th:if="${closestAddresses}==null">
+    <div th:each="restaurant : ${restaurants}" class="col">
+        <div class="card h-100">
+            <img th:src="@{/{picturePath}(picturePath=${restaurant.getPicturePath()})}" class="card-img-top" alt="Restaurant Image">
+            <div class="card-body">
+                <!-- Display Restaurant Name -->
+                <h5 class="card-title" th:text="${restaurant.getName()}">Restaurant Name</h5>
+                <!-- Display Restaurant Rating -->
+                <p class="card-rating" th:text="${'Rating: ' + restaurant.getRating()}">Rating</p>
+                <!-- Display Closest Address if Logged In -->
+                <div class="card-text">
+                    <span class="card-address">Address: <span th:text="${restaurant.getAddress().getFirst()}"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div th:each="entry : ${closestAddresses}" class="col">
         <div class="card h-100">
