--- a/FoodDelivery/src/main/resources/templates/order-page.html
+++ b/FoodDelivery/src/main/resources/templates/order-page.html
@@ -12,6 +12,14 @@
 
 <div th:replace="fragments/fragment :: navbar"></div>
 
+<div id="orderBasket">
+    <h3>Your Basket</h3>
+    <ul id="basketItems">
+        <!-- Basket items will be added here -->
+    </ul>
+    <p>Total: <span id="basketTotal">0</span></p>
+</div>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div th:each="menuItem : ${menu}" class="col">
         <div class="card h-100">
@@ -30,6 +38,32 @@
         </div>
     </div>
 </div>
+
+<script>
+    function addToBasket(menuItemId) {
+        $.ajax({
+            url: '/add-to-basket',
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({ menuItemId: menuItemId }),
+            success: function(response) {
+                updateBasketView(response);
+            },
+            error: function(error) {
+                console.error("Error adding item to basket", error);
+            }
+        });
+    }
+
+    function updateBasketView(basket) {
+        // Clear current basket items
+        $('#basketItems').empty();
+        basket.items.forEach(item => {
+            $('#basketItems').append('<li>' + item.name + ' - Quantity: ' + item.quantity + '</li>');
+        });
+        $('#basketTotal').text(basket.total);
+    }
+</script>
 
 </body>
 </html>
