Restaurant menu items edit and add

--- a/FoodDelivery/src/main/resources/templates/fragments/fragment.html
+++ b/FoodDelivery/src/main/resources/templates/fragments/fragment.html
@@ -27,7 +27,7 @@
             </ul>
 
             <!-- Synchronous search form (Center of navbar) -->
-            <form class="form-inline my-2 my-lg-0 mx-auto" th:action="@{/search}" method="get">
+            <form class="form-inline my-2 my-lg-0 mx-auto" th:action="@{/search}" method="post">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search Restaurants" aria-label="Search" name="query">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
