--- a/FoodDelivery/src/main/resources/templates/restaurant-info.html
+++ b/FoodDelivery/src/main/resources/templates/restaurant-info.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
-    <a th:href="@{/menu-items/add-item/{restarauntName}/(restaurantName=${restaurantName})}">Add</a>
+    <a th:href="@{/menu-items/add-item/{restarauntName}(restaurantName=${restaurant.getName()})}">Add</a>
     <div th:each="menuItem : ${menuItem}" class="col">
         <div class="card h-100">
             <img th:src="@{/{picturePath}(picturePath=${menuItem.getImageURL()})}" class="card-img-top" alt="Menu Item Image">
@@ -19,7 +19,7 @@
                 <h5 class="card-title" th:text="${menuItem.getName()}">Menu Item Name</h5>
                 <p class="card-rating" th:text="${'Price: ' + menuItem.getPrice()}">Price</p>
                 <p class="card-text" th:text="${menuItem.getDescription()}">Description</p>
-                <a th:href="@{/menu-items/edit-menuitem/{restaurantName}/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}">Edit</a>
+                <a th:href="@{/menu-items/{restaurantName}/edit-menuitem/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}">Edit</a>
             </div>
         </div>
     </div>
