--- a/FoodDelivery/src/main/resources/templates/edit-menuitem.html
+++ b/FoodDelivery/src/main/resources/templates/edit-menuitem.html
@@ -20,23 +20,23 @@
             <!-- Restaurant Name Input -->
             <div class="col-12">
                 <label for="inputName" class="form-label">Name</label>
-                <input type="text" class="form-control mb-2" id="inputName" th:value="${menuItem.getName()}" name="Name">
+                <input type="text" class="form-control mb-2" id="inputName" th:value="${menuItem.getName()}" name="name">
             </div>
 
 
             <div class="col-12">
                 <label for="Description" class="form-label">Description</label>
-                <input type="text" class="form-control mb-2" id="Description" th:value="${menuItem.getDescription()}" name="Description">
+                <input type="text" class="form-control mb-2" id="Description" th:value="${menuItem.getDescription()}" name="description">
             </div>
 
             <div class="col-12">
                 <label for="Price" class="form-label">Price</label>
-                <input type="text" class="form-control mb-2" id="Price" th:value="${menuItem.getPrice()}" name="Price">
+                <input type="text" class="form-control mb-2" id="Price" th:value="${menuItem.getPrice()}" name="price">
             </div>
 
             <div class="col-12">
                 <label for="Category" class="form-label">Category</label>
-                <input type="text" class="form-control mb-2" id="Category" th:value="${menuItem.getCategory()}" name="Category">
+                <input type="text" class="form-control mb-2" id="Category" th:value="${menuItem.getCategory()}" name="category">
             </div>
 
             <!-- Submit Button -->
