--- a/FoodDelivery/src/main/resources/templates/edit-menuitem.html
+++ b/FoodDelivery/src/main/resources/templates/edit-menuitem.html
@@ -13,7 +13,7 @@
 
 <div class="card w-100" style="max-width: 400px;">
     <div class="card-body">
-        <form class="row g-3" th:action="@{/menu-items/edit-menuitem/{restaurantName}/{menuItemId}(restaurantName=${restaurant.getName()}, menuItemId=${menuItem.getId()})}" method="post">
+        <form class="row g-3" th:action="@{/menu-items/{restaurantName}/edit-menuitem/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}" method="post">
             <div class="col-12">
                 <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
             </div>
@@ -38,6 +38,8 @@
                 <label for="Category" class="form-label">Category</label>
                 <input type="text" class="form-control mb-2" id="Category" th:value="${menuItem.getCategory()}" name="category">
             </div>
+
+            <input type="hidden" class="form-control mb-2" id="inputImage" th:value="${menuItem.getImageURL()}" name="imageURL">
 
             <!-- Submit Button -->
             <div class="col-12">
