--- a/FoodDelivery/src/main/resources/templates/restaurant-info.html
+++ b/FoodDelivery/src/main/resources/templates/restaurant-info.html
@@ -37,6 +37,11 @@
                 <p class="card-rating" th:text="${'Price: ' + menuItem.getPrice()}">Price</p>
                 <p class="card-text" th:text="${menuItem.getDescription()}">Description</p>
                 <a th:href="@{/menu-items/{restaurantName}/edit-menuitem/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}">Edit</a>
+                <td>
+                    <form th:action="@{/menu-items/{restaurantName}/delete/{menuItemId}(restaurantName=${restaurant.getName()},menuItemId=${menuItem.getId()})}" method="post">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </td>
             </div>
         </div>
     </div>
