--- a/FoodDelivery/src/main/resources/templates/add-restaurant.html
+++ b/FoodDelivery/src/main/resources/templates/add-restaurant.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant</title>
+    <title>Home Page</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Your Custom CSS -->
     <link rel="stylesheet" th:href="@{style.css}">
 </head>
-<body class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+<body>
+
+<div th:replace="fragments/fragment :: navbar"></div>
 
 <div class="card w-100" style="max-width: 400px;">
     <div class="card-body">
-        <form class="row g-3" action="/restaurant" method="post">
+        <form class="row g-3" th:action="@{/restaurant}" method="post" enctype="multipart/form-data">
             <div class="col-12">
                 <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
             </div>
@@ -58,6 +59,12 @@
             <div class="col-12">
                 <label for="inputPostalCode" class="form-label">Postal Code</label>
                 <input type="text" class="form-control mb-2" id="inputPostalCode" name="postalCode">
+            </div>
+
+            <!-- Picture Input -->
+            <div class="col-12">
+                <label for="inputPicture" class="form-label">Picture:</label>
+                <input type="file" class="form-control mb-2" id="inputPicture" name="picture" required />
             </div>
 
             <!-- Submit Button -->
