--- a/FoodDelivery/src/main/resources/templates/add-user.html
+++ b/FoodDelivery/src/main/resources/templates/add-user.html
@@ -1,51 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Page</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Your Custom CSS -->
-    <link rel="stylesheet" th:href="@{/style.css}">
+    <link rel="stylesheet" th:href="@{../style.css}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--light-shades);">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}" style="color: var(--dark-shades);">WEBSITE LOGO</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/}"  style="color: var(--dark-shades);">Home</a>
-                </li>
-                <!-- Other nav items -->
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <!-- Conditional display based on user authentication status -->
-                <li class="nav-item" th:if="${user == null}">
-                    <a class="nav-link" th:href="@{/login}" style="color: var(--dark-shades);">Login</a>
-                </li>
-                <li class="nav-item" th:if="${user == null}">
-                    <a class="nav-link" th:href="@{/register}" style="color: var(--dark-shades);">Register</a>
-                </li>
 
-                <li class="nav-item" th:if="${user != null}">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </li>
-                <li class="nav-item" th:if="${user != null}">
-                    <a class="nav-link" th:href="@{/profile(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);">User Profile</a>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/fragment :: navbar"></div>
 
 <div class="card w-300" style="max-width: 700px;">
     <div class="card-body">
