--- a/FoodDelivery/src/main/resources/templates/address-form.html
+++ b/FoodDelivery/src/main/resources/templates/address-form.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
-    <!-- Include Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <title>Home Page</title>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Your Custom CSS -->
-    <link rel="stylesheet" href="../static/style.css" th:href="@{style.css}">
-
+    <link rel="stylesheet" th:href="@{style.css}">
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100">
+<body>
+
+<div th:replace="fragments/fragment :: navbar"></div>
 <div class="row g-0">
     <img class="col-md-6 bg-image" th:src="@{/images/webpage/registration-form.jpg}" src="/images/webpage/registration-form.jpg" alt="picture">    <div class="col-md-6 d-flex align-items-center justify-content-center">
         <div class="px-5">
