--- a/FoodDelivery/src/main/resources/templates/edit-user.html
+++ b/FoodDelivery/src/main/resources/templates/edit-user.html
@@ -1,55 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Page</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Your Custom CSS -->
-    <link rel="stylesheet" th:href="@{style.css}">
+    <link rel="stylesheet" th:href="@{../../style.css}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--light-shades);">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}" style="color: var(--dark-shades);">WEBSITE LOGO</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/}"  style="color: var(--dark-shades);">Home</a>
-                </li>
-                <!-- Other nav items -->
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <!-- Conditional display based on user authentication status -->
-                <li class="nav-item" th:if="${user == null}">
-                    <a class="nav-link" th:href="@{/login}" style="color: var(--dark-shades);">Login</a>
-                </li>
-                <li class="nav-item" th:if="${user == null}">
-                    <a class="nav-link" th:href="@{/register}" style="color: var(--dark-shades);">Register</a>
-                </li>
 
-                <li class="nav-item" th:if="${user != null}">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </li>
-                <li class="nav-item" th:if="${user != null}">
-                    <a class="nav-link" th:href="@{/profile(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);">User Profile</a>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/fragment :: navbar"></div>
 
 <div class="card w-300" style="max-width: 700px;">
     <div class="card-body">
-        <form class="row g-3" th:action="@{/profile/edit-user/{username}(username=${user.getUsername()})}" method="post">
+        <form class="row g-3" th:action="@{/profile/edit-user/{username}(username=${requestedUser.getUsername()})}" method="post">
 
             <!-- Error Message -->
             <div class="col-12">
@@ -63,19 +28,19 @@
                     <div class="row g-3">
                         <div class="col-md-6">
                             <label for="firstName" class="form-label">First Name:</label>
-                            <input type="text" class="form-control mb-2" id="firstName" name="firstName" th:value="${user.getFirstName()}" required>
+                            <input type="text" class="form-control mb-2" id="firstName" name="firstName" th:value="${requestedUser.getFirstName()}" required>
                         </div>
                         <div class="col-md-6">
                             <label for="lastName" class="form-label">Last Name:</label>
-                            <input type="text" class="form-control mb-2" id="lastName" name="lastName" th:value="${user.getLastName()}" required>
+                            <input type="text" class="form-control mb-2" id="lastName" name="lastName" th:value="${requestedUser.getLastName()}" required>
                         </div>
                         <div class="col-md-12">
                             <label for="username" class="form-label">Username:</label>
-                            <input type="text" class="form-control mb-2" id="username" name="username" th:value="${user.getUsername()}" required>
+                            <input type="text" class="form-control mb-2" id="username" name="username" th:value="${requestedUser.getUsername()}" required>
                         </div>
                         <div class="col-md-12">
                             <label for="email" class="form-label">Email:</label>
-                            <input type="email" class="form-control mb-2" id="email" name="email" th:value="${user.getEmail()}" required>
+                            <input type="email" class="form-control mb-2" id="email" name="email" th:value="${requestedUser.getEmail()}" required>
                         </div>
                         <div class="col-md-6">
                             <label for="password" class="form-label">Password:</label>
@@ -87,14 +52,14 @@
                         </div>
                         <div class="col-md-12">
                             <label for="phoneNumber" class="form-label">Phone Number:</label>
-                            <input type="tel" class="form-control mb-2" id="phoneNumber" name="phoneNumber" th:value="${user.getPhoneNumber()}" required>
+                            <input type="tel" class="form-control mb-2" id="phoneNumber" name="phoneNumber" th:value="${requestedUser.getPhoneNumber()}" required>
                         </div>
                         <div class="col-md-12">
                             <label for="role" class="form-label">Role:</label>
                             <select class="form-control mb-2" id="role" name="role" required>
-                                <option value="user" th:selected="${user.getRole() == 'user'}">User</option>
-                                <option value="admin" th:selected="${user.getRole() == 'admin'}">Admin</option>
-                                <option value="owner" th:selected="${user.getRole() == 'owner'}">Owner</option>
+                                <option value="user" th:selected="${requestedUser.getRole() == 'user'}">User</option>
+                                <option value="admin" th:selected="${requestedUser.getRole() == 'admin'}">Admin</option>
+                                <option value="owner" th:selected="${requestedUser.getRole() == 'owner'}">Owner</option>
                             </select>
                         </div>
                     </div>
