--- a/FoodDelivery/src/main/resources/templates/login-form.html
+++ b/FoodDelivery/src/main/resources/templates/login-form.html
@@ -24,7 +24,7 @@
                     Let’s <span>Sign you in</span>, your meal awaits<span class="yellow-dot">.</span>
                 </h2>
             </div>
-            <form class="row g-3" action="/login" method="post">
+            <form class="row g-3" th:action="@{/login}" method="post">
                 <!-- Error Message -->
                 <div class="col-12">
                     <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
